<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_Light"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.activities.ui.fragments.personalAccount.PersonalAccount">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:background="@color/white"
        android:text="@string/my_account_data"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/white"
        android:background="@color/white"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:src="@drawable/ic_face"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidth="0dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameUser"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:hint="@string/name_and_surname"
            android:padding="10dp"
            android:text="@string/example_name"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneUser"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/_782862626"
            android:textSize="16sp"
            android:hint="@string/hint_phone"
            android:drawableEnd="@drawable/ic_right"
            android:background="@color/white"
            >

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mailUser"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/workoyt3200_mial_ru"
            android:textSize="16sp"
            android:hint="@string/hint_email"
            android:drawableEnd="@drawable/ic_right"
            android:background="@color/white"
            >

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textView11"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/man_gender"
            android:textSize="16sp"
            android:hint="@string/gender"
            android:drawableEnd="@drawable/ic_right"
            android:background="@color/white"
            >

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textView12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:boxStrokeWidth="0dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addressUser"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/address_user"
            android:textSize="16sp"
            android:hint="@string/hint_address_delivery"
            android:drawableEnd="@drawable/ic_right"
            android:background="@color/white"
            >

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>


    <FrameLayout
        android:id="@+id/frameAccount"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >


        <Button
            android:id="@+id/goToAuthentication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_sign_up"
            android:background="@drawable/button_next"
            android:backgroundTint="@null"
            app:backgroundTint="@null"
            android:layout_gravity="center"
            >
        </Button>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>