<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:paddingTop="10dp"
    android:layout_marginBottom="10dp"
    android:background="@color/white"
    android:paddingEnd="10dp"
    android:paddingStart="10dp"

    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/productsCategoryOffer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="15dp"
        android:visibility="visible"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/best_offers"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCategory"
        android:layout_width="match_parent"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productsCategoryOffer"
        app:layout_constraintVertical_bias="0.3" />


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewButtonOffer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:visibility="visible"
            android:gravity="bottom"
            android:textColor="@color/custom_color_primary"
            android:text="@string/hint_80_discount"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="@+id/imageNextAllFilms"
            app:layout_constraintStart_toStartOf="@+id/recyclerViewCategory"
            app:layout_constraintTop_toBottomOf="@+id/recyclerViewCategory" />


        <ImageButton
            android:id="@+id/imageNextAllFilms"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:layout_gravity="end"
            android:background="@drawable/button_next"
            android:backgroundTint="@color/white"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerViewCategory"
            app:srcCompat="@drawable/ic_right" />


    </LinearLayout>



</LinearLayout>